# Deployment_XGBoost_Heart_Disease_UCI

./: .gitignore  Dockerfile  README.md  pyproject.toml
data/raw/: heart.csv
models/: trained_model_2025-01-05.joblib
src/: main.py
src/data/: data_loader.py  data_processor.py  data_splitter.py
src/model/: evaluator.py  saver.py  trainer.py
