[tool.poetry]
name = "XGBoost for Heart Disease"
version = "0.1.0"
description = "\"Pipeline de entrenamiento para Heart Disease UCI Dataset\""
authors = ["Guillermo <guillermocabrera9710@gmail.com>"]
license = "\"APACHE 2.0\""
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
scikit-learn = "^1.6.0"
xgboost = "^2.1.3"
joblib = "^1.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
